--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "pinia": "^2.1.4",
     "primeicons": "^6.0.1",
     "primevue": "^3.31.0",
+    "vee-validate": "^4.11.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
